<resources>
    <string name="app_name">SmartBusinessCard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="edit_card_activity_title">Edit card</string>
    <string name="create_card_activity_title">New card</string>
    <string name="create_card_menu_action_discard">Discard</string>
    <string name="create_card_menu_action_save">Save</string>
    <string name="edit_card_menu_action_delete">Delete</string>
    <string name="edit_card_menu_action_save">Save</string>
    <string name="view_card_activity_title">View card</string>
    <string name="view_card_menu_action_edit">Edit</string>
    <string name="view_card_menu_action_print">Print</string>
    <string name="view_card_menu_action_share">Share</string>
    <string name="share_card_activity_nfc_title">NFC</string>
    <string name="share_card_activity_or_label">Or</string>
    <string name="share_card_activity_qr_help">Capture this QR code.</string>
    <string name="share_card_activity_nfc_help">Tap another phone back-to-back to share.</string>
    <string name="share_card_activity_qr_title">QR code</string>
    <string name="share_card_menu_action_scan">Scan</string>
    <string name="share_card_activity_title">Share card</string>
    <string name="main_activity_list_empty">No cards to show</string>
    <string name="main_menu_action_new">New</string>
    <string name="edit_card_activity_divisor">Conctact info</string>
    <string name="main_menu_action_register">Register</string>
    <string name="edit_user_activity_title">Edit user</string>
    <string name="create_user_activity_title">New user</string>
    <string name="meeting_mode_activity_nfc_title">NFC</string>
    <string name="meeting_mode_activity_or_label">Or</string>
    <string name="meeting_mode_activity_qr_help">Capture this QR code.</string>
    <string name="meeting_mode_activity_qr_title">QR code</string>
    <string name="meeting_mode_activity_title_pairing">Pair with partners</string>
    <string name="meeting_mode_activity_nfc_help">Tap another phone back-to-back to pair.</string>

</resources>
